# pyxJetConnect

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
xjet/: __init__.py
xjetpy/: __init__.py  api.py  constants.py
